# century_assingment

./: README.md  century_health_Data_Assesment(1).ipynb  pyproject.toml  stats.json
conf/base/: catalog.yml
src/final/: __init__.py  __main__.py  settings.py
src/final/pipelines/data_processing/: nodes.py  pipeline.py
