[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "final"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
final = "final.__main__:main"

[tool.kedro]
package_name = "final"
project_name = "final"
kedro_init_version = "0.19.3"
tools = [ "None",]
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "final.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
